<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:background="@color/white"
        app:elevation="0dp"
        android:paddingLeft="@dimen/_8sdp"
        android:paddingRight="@dimen/_8sdp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-10dp"
            app:layout_scrollFlags="scroll|enterAlways"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:elevation="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/whats_you_looking_for"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_bold"
                android:textSize="@dimen/_15ssp"/>

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:scrollbars="none"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_collapseMode="pin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_34sdp"
                    android:background="@drawable/bg_search_radius"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center_vertical"
                        android:padding="@dimen/_8sdp"
                        android:src="@drawable/ic_search"
                        app:tint="@color/grey_50" />

                    <EditText
                        android:id="@+id/et_search"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_11ssp"
                        android:hint="@string/home_search_hint"
                        android:textStyle="bold"
                        android:inputType="text"
                        android:maxLines="1"
                        android:imeOptions="actionSearch"
                        android:textColor="@color/black"
                        android:layout_gravity="center_vertical"
                        android:background="@color/transparent"
                        android:textColorHint="@color/grey_50"/>

                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_10ssp"
                        android:text="@string/search_caption"
                        android:textColor="@color/grey_70"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_10sdp"/>

                    <View
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_2sdp"
                        android:background="@color/orange" />

                </LinearLayout>

                <include layout="@layout/main_popular"/>

                <include layout="@layout/main_upcoming"/>

                <include layout="@layout/main_trending"/>

            </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
