<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/htab_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:padding="@dimen/_6sdp"
                android:src="@drawable/ic_baseline_arrow_back"
                app:tint="@color/black" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/_95sdp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:placeholderImage="@color/grey_10"
                        app:viewAspectRatio="0.65" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/opensans_bold"
                        android:maxLines="2"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_8sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:fontFamily="@font/opensans_regular"
                                android:maxLines="4"
                                android:text="@string/birth_date"
                                android:textColor="@color/grey_40"
                                android:textSize="@dimen/_10ssp" />


                            <TextView
                                android:id="@+id/tv_birth"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:fontFamily="@font/opensans_regular"
                                android:maxLines="4"
                                android:textColor="@color/light_black"
                                android:textSize="@dimen/_11ssp"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:fontFamily="@font/opensans_regular"
                                android:maxLines="4"
                                android:text="@string/known_for"
                                android:textColor="@color/grey_40"
                                android:textSize="@dimen/_10ssp" />

                            <TextView
                                android:id="@+id/tv_known"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:fontFamily="@font/opensans_regular"
                                android:maxLines="4"
                                android:textColor="@color/light_black"
                                android:textSize="@dimen/_11ssp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_8sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:fontFamily="@font/opensans_regular"
                            android:maxLines="4"
                            android:text="@string/place_birth"
                            android:textColor="@color/grey_40"
                            android:textSize="@dimen/_10ssp" />


                        <TextView
                            android:id="@+id/tv_place_birth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:fontFamily="@font/opensans_regular"
                            android:maxLines="4"
                            android:textColor="@color/light_black"
                            android:textSize="@dimen/_11ssp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_8sdp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:fontFamily="@font/opensans_regular"
                            android:maxLines="4"
                            android:text="@string/also_known"
                            android:textColor="@color/grey_40"
                            android:textSize="@dimen/_10ssp" />


                        <TextView
                            android:id="@+id/tv_also_known"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:fontFamily="@font/opensans_regular"
                            android:maxLines="4"
                            android:textColor="@color/light_black"
                            android:textSize="@dimen/_11ssp"
                            android:textStyle="bold" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_10sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="4"
                android:text="@string/biography"
                android:fontFamily="@font/opensans_bold"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/light_black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_8sdp" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/light_black"
                android:textSize="@dimen/_11ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_8sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_10sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="4"
                android:text="@string/known_for"
                android:fontFamily="@font/opensans_bold"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/light_black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_8sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_known"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/grey_40"
                android:textSize="@dimen/_11ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_8sdp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>