<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/htab_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/htab_collapse_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleEnabled="false">

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:fitsSystemWindows="true"
               android:background="@color/white"
               app:layout_collapseMode="parallax">

               <androidx.cardview.widget.CardView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   app:cardCornerRadius="@dimen/_30sdp"
                   app:cardElevation="0dp"
                   android:layout_marginTop="@dimen/_minus15sdp">

                   <ImageView
                       android:id="@+id/backdrop_img"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:scaleType="centerCrop"
                       android:contentDescription="@null" />

               </androidx.cardview.widget.CardView>

           </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0"
                android:background="@color/grey_40"
                android:fitsSystemWindows="true"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_6sdp"
                    android:src="@drawable/ic_baseline_arrow_back"
                    app:tint="@color/black" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_black"
                        android:fontFamily="@font/opensans_bold"
                        android:textSize="@dimen/_16ssp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_4sdp"/>

                    <TextView
                        android:id="@+id/tv_country_release"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey_40"
                        android:textAllCaps="true"
                        android:textSize="@dimen/_11ssp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="end"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_11ssp"
                        android:gravity="center_vertical"
                        android:drawablePadding="@dimen/_4sdp"
                        android:textColor="@color/grey_40"
                        app:drawableLeftCompat="@drawable/ic_baseline_star" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_4sdp"/>

                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey_40"
                        android:textSize="@dimen/_11ssp"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_16sdp"/>

            <TextView
                android:id="@+id/tv_genres_lenght"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange_transparent"
                android:textStyle="bold"
                android:textSize="@dimen/_11ssp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_8sdp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_network"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_8sdp"/>

            <TextView
                android:id="@+id/tv_homepage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/watch"
                android:textStyle="bold"
                android:textSize="@dimen/_11ssp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_16sdp"/>

            <include layout="@layout/item_youtube"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_16sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:fontFamily="@font/opensans_bold"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/light_black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_4sdp"/>

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_black"
                android:textSize="@dimen/_11ssp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_16sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cast"
                android:fontFamily="@font/opensans_bold"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/light_black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_4sdp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_40"
                android:textAllCaps="true"
                android:textSize="@dimen/_11ssp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_16sdp"/>

            <include layout="@layout/detail_recomendation" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>